<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state" />

    <Button
        android:id="@+id/startRecord"
        android:text="@string/startRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/pauseRecord"
        android:text="@string/pauseRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/stopRecord"
        android:text="@string/stopRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/startPlay"
        android:text="@string/startPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/stopPlay"
        android:text="@string/stopPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>